--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/js/app.js": "/assets/js/app.js?id=dac120dfdf78d5b5a707",
-    "/assets/css/app.css": "/assets/css/app.css?id=b7d9e77ac1292f9c4a8b"
+    "/assets/js/app.js": "/assets/js/app.js",
+    "/assets/css/app.css": "/assets/css/app.css"
 }
